fix: hacky solution to mobile menu bar covering footer

--- a/styles/components/Footer.module.scss
+++ b/styles/components/Footer.module.scss
@@ -26,3 +26,8 @@
     }
   }
 }
+
+// hacky solution to show the footer
+.floatFooter {
+  bottom: 50px;
+}
